# transition-trends-canada

./: LICENSE  README.md  ch4.py  co2.py  make_demographic_plots.py  make_ev_registration_plots.py  make_ghg_plots.py  make_plots.py  no2.py  pyproject.toml  test.csv  utils.py
.github/workflows/: make-ghg-plots.yml  make-plots.yml
